# COSO-Take-Home

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION-PLAN.md  Q1-ARCHITECTURE.md  Q1-IMPLEMENTATION-PLAN.md  Q1_CANDIDATE_BRIEF.md  Q2_CANDIDATE_BRIEF.md  README.md  alembic.ini  design-decisions.md  docker-compose.yml  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: 0001_initial_q1_schema.py
app/: __init__.py  config.py  database.py  llm.py  main.py  models.py  query_service.py  schemas.py  sse.py  utils.py
app/answering/: __init__.py  citations.py  prompts.py  service.py
app/conflict/: __init__.py  in09.py
app/eval/: runner.py
app/ingestion/: chunker.py  extractor.py  pipeline.py
app/retrieval/: repository.py  service.py
q1/: baseline_queries.json
q2/: rev_a.dxf  rev_b.dxf
tests/: test_chunker.py  test_citations.py  test_query_service.py
